--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Source+Sans+Pro:wght@200;300&display=swap');
+
+
 *{
     padding: 0;
     margin: 0;
@@ -6,6 +9,7 @@
 
 body{
     background-color: #333;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav{    
@@ -63,6 +67,169 @@ nav li a:hover{
 .container:hover{
     opacity: 100%;
     transition: 0.8s;
+}
+
+.container-login{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
+    flex-wrap: wrap;
+    margin: auto;
+}
+
+.container-login .box{
+    position: relative;
+    width: 450px;
+    height: 600px;
+    color: #fff;
+    background: #111;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 30px;
+    transition: 0.5s;
+}
+
+.container-login .box::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, #ffbc00, #ff0050);
+}
+
+.container-login .box::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, #ffbc00, #ff0050);
+    filter: blur(30px);
+}
+
+.container-login .box span{
+    position: absolute;
+    top: 80px;
+    left: 6px;
+    right: 6px;
+    bottom: 6px;
+    background: rgba(0, 0, 0, .6);
+    z-index: 2;
+    
+}
+
+.container-login .box span::before{
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 74%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.1);
+    z-index: 2;
+    pointer-events: none;
+    filter: blur(25px);
+}
+
+.container-login .box .content{
+    position: relative;
+    z-index: 10;
+    padding: 20px 40px;
+    align-items: center;
+}
+
+.titulo{
+    font-size: 50px;
+    color: #fff;
+    text-align: center;
+    margin-top: -40px;
+    margin-bottom: 60px;
+}
+
+.subtitulo{
+    color: #fff;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.texto{
+    font-family: 'Poppins', sans-serif;
+    font-size: 23px;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.input{
+    color: #fff;
+    padding: 10px 20px;
+    width: 280px;
+    align-items: center;
+    margin-bottom: 20px;
+    border-radius: 0spx;
+    box-shadow: 0 0 10px .5px #111;
+    border: 2px solid #111;
+    background-color: #333;
+    font-family: 'Source Sans Pro', sans-serif;
+    text-align: center;
+    outline: none; 
+}
+
+.input:focus{
+    transform: scale(1.04);
+    background-color: #444;
+    transition: 0.4s;
+}
+
+.box:hover{
+    transform: scale(1.08);
+}
+
+.espacio{
+    height: 25px;
+}
+
+.button{
+    display: flex;
+    border: 2px solid black;
+    border-radius: 25px 10px;
+    padding: 5px 20px; 
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    margin: auto;  
+    background-color: #ff0050; 
+    cursor: pointer;
+    outline: none; 
+    opacity: 60%;
+}
+
+.button:hover{ 
+    opacity: 100%;
+}
+
+.button:active{
+    transform: scale(1.02);
+}
+
+.registro{
+    position: relative;
+    text-decoration: none;
+    cursor: pointer;
+    color: wheat;
+    top: 40px;
+    left: 170px;
+}
+
+.registro:hover{
+    color: white;
+    border-bottom: 2px solid white;
 }
 
 
