--- a/views/register.hbs
+++ b/views/register.hbs
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
     <title>Register</title>
 </head>
 <body>
     <nav>
-        <h4>Node MySQL</h4>
+        <h4>Welcome</h4>
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/login">Login</a></li>
@@ -18,34 +17,27 @@
         </ul>
     </nav>
 
-    <div class="container mt-4">
-        <div class="card">
-            <div class="card-header">
-                Register Form
-            </div>
-            <div class="card-body">
+    <div class="container-login">
+        <div class="box">
+            <span></span>
+            <div class="content">
                 <form action="/auth/register" method="POST">
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" name="name">
-                    </div>
 
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email Address</label>
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password">
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="passwordConfirm" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="passwordConfirm" name="passwordConfirm">
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Register User</button>
+                    <h1 class="titulo">Register Form</h1>
+                    
+                        <label for="name" class="texto">Name</label><br>
+                        <input type="text" class="input" id="name" name="name">
+                        <br>
+                        <label for="email" class="texto">Email Address</label>
+                        <input type="email" class="input" id="email" name="email">
+                
+                        <label for="password" class="texto">Password</label>
+                        <input type="password" class="input" id="password" name="password">
+                    
+                        <label for="passwordConfirm" class="texto">Confirm Password</label>
+                        <input type="password" class="input" id="passwordConfirm" name="passwordConfirm">
+                
+                    <button type="submit" class="button">Register User</button>
                 </form>
             </div>
         </div>
