--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
     <title>Login</title>
 </head>
@@ -18,25 +17,22 @@
         </ul>
     </nav>
 
-    <div class="container mt-4">
-        <div class="card">
-            <div class="card-header">
-                Login Form
-            </div>
-            <div class="card-body">
+    <div class="container-login">
+        <div class="box">
+            <span></span>
+            <div class="content">
                 <form action="/auth/login" method="POST">
+                        <h1 class="titulo">Login Form</h1>
 
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email Address</label>
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
+                        <label for="email" class="texto">Email Address</label>
+                        <input type="email" class="input" id="email" name="email">
 
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" name="password">
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Login</button>
+                        <label for="password" class="texto">Password</label>
+                        <input type="password" class="input" id="password" name="password">
+                        
+                        <div class="espacio"></div>
+                        
+                    <button type="submit" class="button">Login</button>
                 </form>
             </div>
         </div>
@@ -45,6 +41,5 @@
         {{/if}}
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
