--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <h4>Node MySQL</h4>
+        <h4>Welcome</h4>
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/login">Login</a></li>
@@ -31,7 +31,7 @@
                         <input type="password" class="input" id="password" name="password">
                         
                         <div class="espacio"></div>
-                        
+
                     <button type="submit" class="button">Login</button>
                 </form>
             </div>
