--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Source+Sans+Pro:wght@200;300&display=swap');
+
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body{
+    background-color: #333;
+}
+
 nav{
-    background-color: #563d7c;
+    background: #bdc3c7;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #ddd;
     padding: 30px 60px;
     display: flex;
     justify-content: space-between;
+}
+
+.title{
+    font-size: 50px;
 }
 
 nav ul{
@@ -18,12 +38,44 @@ nav li{
 
 nav li a{
     text-decoration: none;
-    color: #ddd;
+    color: #111;
     font-weight: bold;
     padding: 5px 8px;
 }
 
 nav li a:hover{
-    color: yellowgreen;
-    text-decoration: none;
+    color: #eee;    
+    border-bottom: 2px solid #eee;
+}
+
+.card{
+    margin: 200px auto;
+    border-radius: 20px;
+    box-shadow: 0 0 25px 4px #ddd;
+}
+
+.card:hover{
+    transform: translateY(-20px);
+    transition: 0.6s;
+}
+
+.form-control{
+    background-color: #ddd;
+}
+
+.form-control:hover{
+    background-color: #bdc3c7;
+    transform: scale(1.02);
+    transition: 0.6s;
+}
+
+.btn{
+    background-color: #111;
+    color: #eee;
+}
+
+.btn:hover{
+    background-color: green;
+    transform: scale(1.04);
+    transition: 0.6s;
 }
