--- a/views/login.hbs
+++ b/views/login.hbs
@@ -37,7 +37,9 @@
             </div>
         </div>
         {{#if message}}
-            <h4 class="alert alert-danger mt-4">{{message}}</h4>
+            <div class="alert-container">
+                <h4 class="alert alert-danger mt-4">{{message}}</h4>
+            </div>
         {{/if}}
     </div>
 
